[package]
name = "qrcode_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode = "0.13.0"
image = "0.24"
sha2 = "0.10.8"
resvg = "0.38.0"
tempdir = "0.3.7"
qrcode-png = "0.4.1"
qrrs = "0.1.9"
qrcode-generator = "4.1.9"
svg = "0.16.0"




